Anonymous | Login | 2021-01-18 08:22 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031147 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2019-11-10 18:26 | 2020-09-15 12:47 | ||||||||
Reporter | Vico Liang | ||||||||||||
Assigned To | msv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.4.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031147: Modeling Algorithms - BRepOffsetAPI_MakePipeShell null access | ||||||||||||
Description | TopoDS_Wire aSpine = ... ;//"pipeShell-fail.brep" TopoDS_Wire aWire = ... ;//"pipeShell-fail.brep" BRepOffsetAPI_MakePipeShell aMakePipe(aSpine); aMakePipe.Add(aWire, Standard_False, Standard_False); aMakePipe.SetTransitionMode(BRepBuilderAPI_RoundCorner); aMakePipe.SetDiscreteMode(); aMakePipe.SetTolerance(); aMakePipe.Build(); // Null access occurs as below function stacktrace: TKBool.dll!BRepFill_PipeShell::BuildHistory(const BRepFill_Sweep & theSweep) Line 1443 C++ TKBool.dll!BRepFill_PipeShell::Build() Line 795 C++ TKOffset.dll!BRepOffsetAPI_MakePipeShell::Build() Line 259 C++ | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() ![]() ![]() | ||||||||||||
![]() |
|||
Date Modified | Username | Field | Change |
2019-11-10 18:26 | Vico Liang | New Issue | |
2019-11-10 18:26 | Vico Liang | Assigned To | => msv |
2019-11-10 18:26 | Vico Liang | File Added: pipeshell-fail.brep | |
2019-11-10 18:26 | Vico Liang | File Added: pipeshell-fail.png | |
2019-11-10 18:27 | Vico Liang | File Added: pipeshell-fail-shape.png | |
2019-12-17 13:29 | kgv | Summary | BRepOffsetAPI_MakePipeShell null access => Modeling Algorithms - BRepOffsetAPI_MakePipeShell null access |
2020-09-15 12:47 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |