0031147: Modeling Algorithms - BRepOffsetAPI_MakePipeShell null access

Added to Draw command 'setsweep ' posibility to change degmax and segmax parameter manually by '-SM' and '-DM' options
Added test
Added new condition to prevent crash